--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,35 @@
-@keyframes bounce {
-  0% {
-    transform: translateY(-2000px);
-  }
 
-  70% {
-    transform: translateY(30px);
-  }
+@-webkit-keyframes bounce{
+  0%{transform:translate(-50%,-2000px)}
+  
+  50%{transform:translate(-50%,-130px)}
+  
+  70%{transform:translate(-50%,-295px)}to{transform:translate(-50%,-215px)}}
+  
+  @keyframes bounce{
+  0%{transform:translate(-50%,-2000px)}
+  
+  50%{transform:translate(-50%,-130px)}
+  
+  70%{transform:translate(-50%,-295px)}to{transform:translate(-50%,-215px)}}
+  
+  @-webkit-keyframes shake{
+  
+  0%,to{transform:translate(-310px,-50%)}
+  
+  10%,50%,90%{transform:translate(-320px,-50%)}
+  
+  20%,60%{transform:translate(-300px,-50%)}}
+  
+  @keyframes shake {
+  
+  0%,to {transform:translate(-310px,-50%)}
+  
+  10%,50%,90%{transform:translate(-320px,-50%)}
+  
+  20%,60% {transform:translate(-300px,-50%)}}
 
-  90% {
-    transform: translateY(-10px);
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes shake {
-  0%,
-  100% {
-    transform: translateX(0);
-  }
-
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: translateX(-10px);
-  }
-
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: translateX(10px);
-  }
-}
+  
 /*Fonts*/
 
 @font-face {
@@ -976,6 +969,7 @@ img {
   cursor: pointer;
 }
 
+.current-circle,
 .slider-circle-1:active,
 .slider-circle-2:active {
   background-color: var(--amaranth);
@@ -1247,7 +1241,6 @@ img {
   height: 30px;
   padding-top: 8px;
   font-family: Cuprum, Arial, sans-serif;
-
   font-size: 14px;
   line-height: 18px;
   text-align: center;
@@ -1272,6 +1265,25 @@ img {
   transform: rotate(45deg);
 }
 
+.item-new::before {
+  content: "new";
+  top: 50px;
+  left: 200px;
+  box-sizing: border-box;
+  width: 100px;
+  height: 30px;
+  padding-top: 8px;
+  font-family: Cuprum, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: var(--white);
+  text-transform: uppercase;
+  background-color: var(--amaranth);
+  z-index: -1;
+  transform: rotate(45deg);
+}
+
 .product-card {
   font-family: "PT Sans", Arial, sans-serif;
   font-style: normal;
@@ -1288,6 +1300,7 @@ img {
   box-sizing: border-box;
   overflow: hidden;
 }
+
 
 .product-card:hover {
   box-shadow: 0px 4px 20px var(--black-015);
@@ -1317,15 +1330,10 @@ img {
   position: absolute;
   top: 38px;
   right: 44px;
-
   display: grid;
   gap: 10px;
   order: 0;
 }
-
-/*.product-card:hover .model-item-finalize {
-  display: block;
-}*/
 
 .product-card:not(:last-child) {
   margin-right: 20px;
@@ -1453,7 +1461,7 @@ img {
 }
 
 .button-goods-bookmarks {
-  color: var(--gulf-blue);
+  background-color: var(--white);
   outline: 3px solid var(--apple);
   outline-offset: -3px;
   width: 135px;
@@ -1465,12 +1473,14 @@ img {
 }
 
 .button-goods-bookmarks:hover {
+  background-color: var(--white);
   outline: 3px solid var(--gulf-blue);
   outline-offset: -3px;
 }
 
 .button-goods-bookmarks:active {
   color: var(--link-water);
+  background-color: var(--white);
   outline: 3px solid var(--link-water);
   outline-offset: -3px;
 }
@@ -1576,6 +1586,7 @@ img {
   padding-left: 80px;
   white-space: nowrap;
 }
+
 
 .service-slide {
   font-family: Cuprum, Arial, sans-serif;
@@ -2135,6 +2146,7 @@ img {
 
 .footer-catalog-list {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
 }
@@ -2191,10 +2203,12 @@ img {
 }
 
 .footer-socials-list {
+  width: 135px;
   margin-top: 14px;
   margin-left: 117px;
   margin-right: 118px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .personal-info,
