--- a/css/style.css
+++ b/css/style.css
@@ -194,13 +194,16 @@ img {
 .service-btn-guarantee:active,
 .service-btn-credit:active,
 .button-goods-buy:active,
-.slider-circle-1:focus-within,
-.slider-circle-2:focus-within,
-.slider-circle-1:active,
-.slider-circle-2:active,
 .close-btn:active {
   outline: none;
   border: none;
+}
+
+.slider-circle-1:focus-within,
+.slider-circle-2:focus-within,
+.slider-circle-1:active,
+.slider-circle-2:active {
+  outline: none;
 }
 
 .upper-bar-wrapper {
@@ -969,9 +972,7 @@ img {
   cursor: pointer;
 }
 
-.current-circle,
-.slider-circle-1:active,
-.slider-circle-2:active {
+.current-circle {
   background-color: var(--amaranth);
   border: 2px solid var(--white);
   border-radius: 50%;
@@ -1234,41 +1235,12 @@ img {
   left: 40px;
 }
 
-.new-product {
-  display: block;
-  box-sizing: border-box;
-  width: 100px;
-  height: 30px;
-  padding-top: 8px;
-  font-family: Cuprum, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 18px;
-  text-align: center;
-  color: var(--white);
-  text-transform: uppercase;
-  background-color: var(--amaranth);
-  z-index: -1;
-}
-
-.new-promo {
-  position: absolute;
-  top: -6px;
-  right: -27px;
-  transform: rotate(45deg);
-  z-index: 5;
-}
-
-.new-popular {
-  position: absolute;
-  top: -4px;
-  right: -26px;
-  transform: rotate(45deg);
-}
-
 .item-new::before {
+  position: absolute;
   content: "new";
-  top: 50px;
-  left: 200px;
+  transform: rotate(45deg);
+  top: 9px;
+  right: -25px;
   box-sizing: border-box;
   width: 100px;
   height: 30px;
@@ -1281,7 +1253,26 @@ img {
   text-transform: uppercase;
   background-color: var(--amaranth);
   z-index: -1;
+}
+
+.feature-new::before {
+  position: absolute;
+  content: "new";
   transform: rotate(45deg);
+  top: 7px;
+  right: -25px;
+  box-sizing: border-box;
+  width: 100px;
+  height: 30px;
+  padding-top: 8px;
+  font-family: Cuprum, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: var(--white);
+  text-transform: uppercase;
+  background-color: var(--amaranth);
+  z-index: 10;
 }
 
 .product-card {
@@ -1300,7 +1291,6 @@ img {
   box-sizing: border-box;
   overflow: hidden;
 }
-
 
 .product-card:hover {
   box-shadow: 0px 4px 20px var(--black-015);
@@ -1585,6 +1575,10 @@ img {
   color: var(--black);
   padding-left: 80px;
   white-space: nowrap;
+}
+
+.delivery .service-pitch {
+  width: 300px;
 }
 
 
@@ -2229,14 +2223,6 @@ img {
   color: var(--silver);
 }
 
-.circle-bg:hover {
-  fill: var(--amaranth);
-}
-
-.circle-bg:active {
-  fill: var(--silver);
-}
-
 .category-title {
   font-family: Cuprum, Arial, sans-serif;
   font-style: normal;
@@ -2576,6 +2562,8 @@ img {
   background-repeat: no-repeat;
 }
 
+
+
 .filter-input-radio:checked + label::before {
   content: "";
   position: absolute;
@@ -2608,6 +2596,17 @@ img {
   border: 4px solid var(--silver);
   border-radius: 50%;
 }
+
+.filter-input-checkbox:disabled + label {
+  cursor: default;
+  opacity: 0.3;
+  }
+  
+  .filter-input-checkbox:disabled:hover + label::before,
+  .filter-input-checkbox:disabled:hover + label::after
+   {
+    opacity: 0.7;
+  }
 
 .filter-form h2 {
   margin: 0;
