--- a/css/style.css
+++ b/css/style.css
@@ -1165,44 +1165,60 @@ img {
   font-size: 30px;
   line-height: 30px;
   color: var(--china-blue);
-  background-color: var(--linen);
 }
 
-.popular-brands h2,
 .popular-wrapper h2 {
-  padding-top: 29px;
-  padding-bottom: 30px;
+  margin-top: 5px;
   padding-left: 28px;
-}
-
-.popular-wrapper h2 {
-  margin-bottom: 18px;
-}
-
-.popular-wrapper,
-.popular-brands {
-  position: relative;
-}
-
-.popular-brands {
-  margin-top: 50px;
+  padding-top: 0;
+  width: 692px;
 }
 
 .popular-wrapper {
+  padding-top: 23px;
+  padding-right: 11px;
+  padding-bottom: 2px;
+  width: 929px;
   margin-top: 60px;
+  margin-bottom: 22px;
+  background-color: var(--linen);
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 10px;
 }
 
 .all-popular-goods-btn {
-  position: absolute;
-  top: 24px;
-  right: 15px;
-  padding: 11px 24px 9px 24px;
+  width: 144px;
+  padding: 10px 24px 9px 24px;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.popular-brands-wrapper {
+  padding-top: 34px;
+  padding-right: 11px;
+  padding-bottom: 4px;
+  width: 929px;
+  margin-top: 50px;
+  margin-bottom: 26px;
+  background-color: var(--linen);
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 3px;
+}
+
+.popular-brands-wrapper h2 {
+  padding-left: 28px;
+  padding-top: 0;
+  margin-top: -5px;
+  width: 692px;
 }
 
 .all-brands-btn {
-  position: absolute;
-  top: 25px;
-  right: 19px;
+  display: inline-block;
+  margin-top: -8px;
+  margin-bottom: 20px;
+  width: 115px;
   padding: 11px 38px 9px 39px;
 }
 
@@ -1251,8 +1267,7 @@ img {
   text-align: center;
   color: var(--white);
   text-transform: uppercase;
-  background-color: var(--amaranth);
-  z-index: -1;
+  background-color: var(--amaranth); 
 }
 
 .feature-new::before {
@@ -1283,20 +1298,23 @@ img {
   outline-offset: -1px;
   width: 220px;
   min-height: 318px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-bottom: 20px;
   position: relative;
   box-sizing: border-box;
   overflow: hidden;
 }
 
+.product-card.catalog {
+  margin-bottom: 19px;
+}
+
 .product-card:hover {
   box-shadow: 0px 4px 20px var(--black-015);
 }
 
-.product-card:hover img {
+.product-card:hover img,
+.product-card:focus-within img,
+.product-card:focus img  {
   display: none;
 }
 
@@ -1337,18 +1355,19 @@ img {
   font-size: 18px;
   line-height: 20px;
   color: var(--black);
-
   text-align: center;
-  position: absolute;
-  top: 161px;
-  left: 31px;
+  margin-top: 180px;
+  margin-bottom: 7px;
+  margin-left: 31px;
   box-sizing: border-box;
   width: 157px;
+  display: block;
 }
 
 .product-card-image {
   background-color: var(--white);
   object-fit: contain;
+  display: block;
 }
 
 .bfg9000 {
@@ -1362,15 +1381,13 @@ img {
   height: 112px;
 }
 
+.bfg2000 ~ .price-container {
+  margin-top: 39px;
+}
+
 .bfg6000 {
   width: 144px;
   height: 128px;
-}
-
-.price-container {
-  position: absolute;
-  bottom: 32px;
-  left: 78px;
 }
 
 .price {
@@ -1380,10 +1397,38 @@ img {
   position: relative;
   z-index: 2;
   padding: 0;
+  padding-top: 9px;
+  padding-left: 5px;
+  padding-bottom: 10px;
+  width: 118px;
   margin: 0;
+  margin-top: 0;
+  margin-left: 45px;
+  margin-bottom: 21px;
+  display: block;
+  text-align: center;
+  background-color: var(--amaranth);
+  border-radius: 2px;
 }
 
 .price::after {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  left: 122px;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  background-color: var(--kelly-green);
+  transform: rotate(45deg);
+  /*border: 10px solid transparent;
+    border-left: 40px solid green;*/
+
+}
+/*.price::after {
   content: "";
   position: absolute;
   width: 141px;
@@ -1391,20 +1436,20 @@ img {
   background-image: url(../img/red-button.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
-  left: -32px;
-  top: -10px;
+  left: 45px;
+  top: -9px;
   z-index: -1;
 }
+*/
 
 .old-price {
   font-size: 17px;
   line-height: 18px;
   color: var(--dark-grey);
-  padding-bottom: 16px;
+  text-align: center;
   box-sizing: border-box;
-  position: absolute;
-  left: 76px;
-  bottom: 58px;
+  display: block;
+  margin-bottom: 15px;
 }
 
 .button-goods-buy,
@@ -1574,14 +1619,11 @@ img {
   line-height: 24px;
   color: var(--black);
   padding-left: 80px;
-  white-space: nowrap;
+  display: block;
+  width: 320px;
+  position: relative;
+  z-index: 3;
 }
-
-.delivery .service-pitch {
-  width: 300px;
-}
-
-
 .service-slide {
   font-family: Cuprum, Arial, sans-serif;
   font-style: normal;
@@ -2597,16 +2639,20 @@ img {
   border-radius: 50%;
 }
 
-.filter-input-checkbox:disabled + label {
+.filter-input-checkbox:disabled + label,
+.filter-input-radio:disabled + label {
   cursor: default;
   opacity: 0.3;
   }
   
   .filter-input-checkbox:disabled:hover + label::before,
-  .filter-input-checkbox:disabled:hover + label::after
+  .filter-input-checkbox:disabled:hover + label::after,
+  .filter-input-radio:disabled:hover + label::before,
+  .filter-input-radio:disabled:hover + label::after
    {
     opacity: 0.7;
   }
+
 
 .filter-form h2 {
   margin: 0;
@@ -2825,7 +2871,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   margin-left: 200px;
-  margin-top: 33px;
+  margin-top: 35px;
   margin-bottom: 69px;
 }
 
